IDEUI-149: fix tab active state, fix bug with hidding part of scrollbar, fix tabs in FF.

--- a/codenvy-ext-runner/src/main/resources/com/codenvy/ide/extension/runner/client/runner.css
+++ b/codenvy-ext-runner/src/main/resources/com/codenvy/ide/extension/runner/client/runner.css
@@ -32,4 +32,5 @@
 .tab-selected {
     background-color: #343434;
     color: #00B7EC;
+    border-right-color: #343434;
 }
